--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Vamsi Krishna",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongoose": "^6.0.12",
     "nodemon": "^2.0.15"
