--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "test": ""
+    "test": "",
+    "dev" : "nodemon index.js"
   },
   "keywords": [
     "hotel",
