--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 MONGO_USER_NAME='admin'
 MONGO_PASSWORD  ='M42gjtqvhri0ZISh'
 TWILIO_ACCOUNT_SID = 'ACa3aa766c099677557b7bac14b1c63ad8'
-TWILIO_AUTH_TOKEN = 'b4d61ed492a375efba65e365616b86a5'
+TWILIO_AUTH_TOKEN = '1d3bd9d86513101f5f07bd118e74df85'
 TWILIO_PHONE_NUMBER = '+14155238886'
+RAZOR_KEY_ID='rzp_test_8IAqZvWMKpMhdp'
+RAZOR_KEY_SECRET='BtSqrVp6THjioQZq5BUTpbbb'
